updating data tutorial

--- a/tutorial_TeX/RB_Data_Tutorial/RB_Data_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Data_Tutorial/RB_Data_Tutorial_content.tex
@@ -390,6 +390,5 @@ For example, in {\tt epoch1}, Kauai's {\tt dispersalValues} is equal to {\tt [ 1
 The {\tt dispersalValues} for Oahu, Maui, and Hawaii are all equal to {\tt [ 0,0,0,0 ]}, meaning no species may be present in that area during the time interval of {\t epoch1} during ages from 10.0 to 3.7. In contrast, {\tt epoch4}, from ages 0.5 to the present, range expansions may occur between any pair of areas and any area may be included in a species' range.
 
 
-
-%\bibliographystyle{mbe}
-%\bibliography{bib_tex/master_refs}
+\bibliographystyle{sysbio}
+\bibliography{\GlobalResourcePath refs}
